--- a/views/css/styleForFollowing.css
+++ b/views/css/styleForFollowing.css
@@ -184,7 +184,6 @@ div {
 }
 
 .b2row1{
-    height: 150px;
     align-items: center;
     text-align: center;
     border: 0px;
