--- a/views/css/styleForOrganizationProfile.css
+++ b/views/css/styleForOrganizationProfile.css
@@ -177,7 +177,6 @@ div {
 }
 
 .b2row1{
-    height: 150px;
     align-items: center;
     text-align: center;
     border: 0px;
