--- a/views/css/styleForStudentEditProfile.css
+++ b/views/css/styleForStudentEditProfile.css
@@ -192,7 +192,6 @@ a.button:active,
 }
 
 .b2row1 {
-    height: 150px;
     align-items: center;
     text-align: center;
     border: 0px;
