--- a/views/css/styleForStudentProfile.css
+++ b/views/css/styleForStudentProfile.css
@@ -189,7 +189,6 @@ div {
 }
 
 .b2row1{
-    height: 150px;
     align-items: center;
     text-align: center;
     border: 0px;
